feat: hero section responsivness

--- a/_scss/modules/_config.scss
+++ b/_scss/modules/_config.scss
@@ -7,6 +7,11 @@ $title-font-size-1: 2.0rem;
 $title-font-size-2: 3rem;
 $title-font-size-3: 64px;
 
+$text-font-size-1-xs: 1.1rem;
+$text-font-size-2-xs: 1.2rem;
+$title-font-size-1-xs: 1.7rem;
+$title-font-size-2-xs: 2.2rem;
+
 // Animations Timing
 $transition-links: 300ms;
 $animation-arrow-header-time: 2.5s;
