--- a/_scss/components/_buttons.scss
+++ b/_scss/components/_buttons.scss
@@ -20,6 +20,10 @@
   text-align: center;
   border-radius: 5px;
 
+  @media (max-width: 768px) {
+    font-size: $text-font-size-1-xs;
+  }
+
   &.button-focus {
     background-color: $dark-orange;
   }
