feat: first page responsiveness

--- a/_includes/sections/blog.html
+++ b/_includes/sections/blog.html
@@ -9,7 +9,7 @@
       {% for post in site.posts limit:4 %}
 
         <!-- Blog Article -->
-        <div class="col-md-3 col-md-push-0 col-sm-10 col-sm-push-1 col-xs-10 col-xs-push-1">
+        <div class="col-md-3 col-md-push-0 col-sm-10 col-sm-push-1 col-xs-12 col-xs-push-1">
           <article class="blog-article">
 
             <!-- Article Header -->
@@ -33,10 +33,12 @@
     </div>
 
     <!-- View All Posts CTA -->
-    <div class="row view-posts text-center">
+    <div class="row view-posts">
+      <div class="col-xs-12">
         <a href="blog/" class="link link--arrow">
           Read More
         </a>
+      </div>
     </div>
 
   </div>
