--- a/_scss/components/_buttons.scss
+++ b/_scss/components/_buttons.scss
@@ -22,6 +22,7 @@
 
   @media (max-width: 768px) {
     font-size: $text-font-size-1-xs;
+    padding: 0.6em 1.5em;
   }
 
   &.button-focus {
@@ -75,9 +76,13 @@
       font-weight: 700;
       font-size: 1.6em;
       font-family: '7-stroke';
-      top: calc(50% - 14px);
+      bottom: -7px;
       line-height: 30px;
     }
+  }
+
+  @media (max-width: 768px) {
+    font-size: $text-font-size-1-xs;
   }
 }
 
