--- a/_scss/layout/_features.scss
+++ b/_scss/layout/_features.scss
@@ -8,9 +8,14 @@
 
 section.features-section {
   background-color: $white;
+
+  @media (max-width: 768px) {
+    padding: 40px 0;
+  }
   // Feature
   .feature {
     margin-bottom: 100px;
+    position: relative;
 
     &:last-child {
       margin-bottom: 30px;
@@ -22,7 +27,26 @@ section.features-section {
     &-icon {
       order: 2
     }
+    @media (max-width: 768px) {
+      &-icon {
+        position: absolute;
+        width: 50%;
+        right: 0;
+        align-items: flex-start;
+        height: 100%;
+        top: -100px;
+        
+        &--1 {
+          top: 0;
+        }
 
+        svg {
+          width: 100%;
+          height: 50%;
+          min-height: 160px;
+        }
+      }
+    }
     &:nth-child(even) {
       .feature-content {
         order: 2;
@@ -37,11 +61,47 @@ section.features-section {
       text-transform: uppercase;
       margin-bottom: 20px;
       color: $web-blue;
+
+      &--xs {
+        display: none;
+        font-size: 1.4rem;
+        margin-bottom: 30px;
+      }
+      @media (max-width: 768px) {
+        display: none;
+        &--xs {
+            display: block;
+        }
+      }
     }
 
     .feature-description {
       font-size: $text-font-size-1;
       margin-bottom: 30px;
+
+      &--xs {
+        display: none;
+        font-size: $text-font-size-1-xs;
+        margin-bottom: 30px;
+      }
+      @media (max-width: 768px) {
+        display: none;
+        &--xs {
+            display: block;
+        }
+      }
+    }
+
+    .feature-link {
+      &--xs {
+        display: none;
+      }
+      @media (max-width: 768px) {
+        display: none;
+        &--xs {
+            display: block;
+        }
+      }
     }
   }
   // CONTACT US and LEARN MORE
@@ -59,6 +119,23 @@ section.features-section {
     &>div:last-child {
       a {
         margin-left: 20px;
+      }
+    }
+
+    &--xs {
+      display: none;
+    }
+    @media (max-width: 768px) {
+      display: none;
+      &--xs {
+          display: flex;
+          flex-wrap: wrap;
+          justify-content: center;
+          margin-top: -40px;
+          margin-bottom: 40px;
+          a {
+            margin: 5px;
+          }
       }
     }
   }
