--- a/_includes/sections/solutions.html
+++ b/_includes/sections/solutions.html
@@ -1,28 +1,35 @@
 <!-- Solutions Section -->
 <section class="site-section section-focus solutions-section" id="solutions">
   <div class="container">
-    <!-- Solutions Page Description -->
-    <h3 class="solution-section__description">{{ page.description }}</h3>
+    <div class="row">
+      <div class="col-xs-12">
+        <!-- Solutions Page Description -->
+        <h3 class="solution-section__description">{{ page.description }}</h3>
 
-    <!-- Solutions Page Title -->
-    <h2 class="site-section__title">{{ page.title }}</h2>
-
+        <!-- Solutions Page Title -->
+        <h2 class="site-section__title">{{ page.title }}</h2>
+      </div>
+    </div>
     <!-- Solutions -->
     <div
       class="row"
     >
-    {% for solution in page.solutions %}
-      <div class="col-xs-12 col-sm-6 col-md-4">
-        <div class="solution">
-          <h4 class="solution-title">
-            {{ solution.title }}
-          </h4>
-          <p class="solution-description">
-            {{ solution.description }}
-          </p>
+      {% for solution in page.solutions %}
+        <div class="col-sm-12 col-md-4">
+          <div class="solution">
+            <h4 class="solution-title">
+              {{ solution.title }}
+            </h4>
+            <p class="solution-description">
+              {{ solution.description }}
+            </p>
+          </div>
         </div>
+      {% endfor %}
+      <div class="col-xs-12 hidden-md hidden-lg">
+        <a href="" class="button">GET A DEMO</a>
       </div>
-    {% endfor %}
+
     </div>
   </div>
 </section>
