--- a/_scss/layout/_solutions.scss
+++ b/_scss/layout/_solutions.scss
@@ -9,9 +9,19 @@
 section.solutions-section {
   background-color: $white !important;
   padding: 10px 0 60px;
-
+  .container {
+    position: relative;
+  }
   .site-section__title {
     margin-bottom: 100px;
+    @media (max-width: 993px) {
+      margin-top: 0px;
+    }
+    @media (max-width: 768px) {
+      position: absolute;
+      top: 30px;
+      width: 90%;
+    }
   }
 
   .solution-section__description {
@@ -19,10 +29,23 @@ section.solutions-section {
     font-size: $title-font-size-1;
     line-height: 1.5;
     font-weight: 400;
+    @media (max-width: 993px) {
+      font-size: $text-font-size-2;
+    }
+    @media (max-width: 768px) {
+      font-size: $text-font-size-1;
+      padding-top: 120px;
+      text-align: center;
+    }
   }
 
   .row {
     align-items: flex-start;
+    .button {
+      width: fit-content;
+      margin-left: auto;
+      margin-right: auto;
+    }
   }
 
   // Solution
@@ -31,7 +54,13 @@ section.solutions-section {
     font-weight: 400;
     height: 100%;
     padding: 25px;
-    
+    @media (max-width: 993px) {
+      margin-bottom: 40px;
+    }
+    @media (max-width: 768px) {
+      padding: 50px 25px;
+    }
+
     &-title {
       text-transform: uppercase;
       font-size: 1.4rem;
@@ -47,10 +76,22 @@ section.solutions-section {
         bottom: -15px;
         left: calc(50% - 50px);
       }
+      @media (max-width: 768px) {
+        font-size: 1.3rem;
+        color: $black-blue;
+        &::after {
+            width: 36px;
+            left: calc(50% - 18px);
+            bottom: -25px;
+        }
+      }
     }
     &-description {
       padding: 25px 10px 0;
       font-size: $text-font-size-1;
+      @media (max-width: 768px) {
+        font-size: 1.1rem;
+      }
     }
   }
 }
