--- a/_scss/modules/_bootstrap-grid.scss
+++ b/_scss/modules/_bootstrap-grid.scss
@@ -47,6 +47,8 @@
 @media (min-width: 1200px) {
  .container {
    width: 1170px;
+   padding-left: 15px;
+   padding-right: 15px;
  }
 }
 .container-fluid {
